Fix/PLF-7241: Wrong width of notification bar (#149)
* Fix/PLF-7241: Wrong width of notification bar

* add requested changes

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/skin/uiToolbarContainer/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/skin/uiToolbarContainer/Style.less
@@ -563,10 +563,6 @@
 		.user-name{
 			color: @linkColor;
 		}
-		.media {
-			min-width: 300px;
-			max-width: 100%;
-		}
 		> li {
 			display: block;
 			padding: 6px 10px 6px 10px;
@@ -854,4 +850,10 @@
       		display: none;
     	}
   	}
+}
+
+@media (min-width: 768px) {
+	.uiNotificationPopoverToolbarPortlet .dropdown-menu {
+		width: 300px;
+	}
 }
